# operational-cognition-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  security.yml
docs/: research_themes.md
evaluations/: README.md  evaluation_framework.py
experiments/decision_intelligence/: README.md  decision_replay.py
experiments/organizational_memory/: README.md  memory_persistence_eval.py
experiments/workflow_cognition/: README.md  workflow_pattern_detection.py
prototypes/autonomous_escalation/: README.md  prototype.py
prototypes/conversational_workflow/: README.md  prototype.py
tests/: test_decision_replay.py  test_evaluation_framework.py  test_memory_persistence_eval.py  test_prototypes.py  test_workflow_pattern_detection.py
whitepapers/: README.md  ai_native_enterprise_vision.md
