[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "operational-cognition-lab"
version = "0.1.0"
description = "Research and experimentation lab for AI-native operational intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Akash Raj"},
    {name = "Prem Kumar"},
]
keywords = [
    "ai",
    "operational-intelligence",
    "workflow-cognition",
    "organizational-memory",
    "decision-intelligence",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.hatch.build.targets.wheel]
packages = ["experiments", "prototypes", "evaluations"]
